# serojump-widget

./: .gitignore  CMakeLists.txt  DEPLOYMENT.md  README.md  build.sh  build_simple.sh  setup-github.sh  start.sh
.github/workflows/: deploy.yml  simple-deploy.yml
src/: serojump.cpp  serojump.hpp  server.cpp
web/: index.html  sample_data.csv  serojump-app.js  serojump_module.js
